--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build": "tsc && vite build && vite build --ssr"
     },
     "devDependencies": {
-        "@headlessui/react": "^1.4.2",
+        "@headlessui/react": "^1.7.19",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@types/node": "^18.13.0",
@@ -22,5 +22,8 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@heroicons/react": "^2.1.4"
     }
 }
