--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,6 +26,7 @@ jobs:
           /usr/bin/php8.3 artisan route:clear
           /usr/bin/php8.3 artisan migrate --env=testing
           /usr/bin/php8.3 artisan migrate
+          /usr/bin/php8.3 artisan db:seed
           /usr/bin/php8.3 artisan test --filter NewProductTest
           export NVM_DIR=~/.nvm
           source ~/.nvm/nvm.sh
