--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "mll-lab/laravel-graphiql": "^3.2",
+        "nuwave/lighthouse": "^6.38",
         "spatie/laravel-permission": "^6.7",
         "tightenco/ziggy": "^2.0"
     },
